# localzero-generator-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  cmptool.py  devtool.py  gtest.py  importMarktStammDatenV2.py  install-environment.sh  pyproject.toml  ready-to-rock.sh
.github/workflows/: ci.yaml  ci.yaml-disabled
attic/: Codegen_demo.ipynb  Electricity2030 (original).py  Fuels2018.ipynb  Fuels2030.ipynb  Generator.ipynb  SearchGeneratorValue.ipynb  Test.ipynb  Transport2018.ipynb  Transport2030.ipynb  UnitTest.ipynb  g2pScript.ipynb  knud_classes.py  loadDataTables.ipynb  loadFacts.ipynb
commands/: README.rst  arguments.py  cmd_compare_to_excel.py  cmd_compare_to_excel_parser.py  cmd_data.py  cmd_data_parser.py  cmd_explorer.py  cmd_explorer_parser.py  cmd_indicators.py  cmd_indicators_parser.py  cmd_ready_to_rock.py  cmd_ready_to_rock_parser.py  cmd_run.py  cmd_run_parser.py  cmd_test_end_to_end.py  cmd_test_end_to_end_parser.py  monkeypatch.py  tracednumber.py
comparison/: README.rst  comparison.py  comparisonsector.py
data/: README.rst  gendatafilesfromxlsx.py  production.json
docs/: conf.py  index.rst  requirements.txt
docs/sectors/: agriculture.rst  bilanz.rst  electricity.rst  faq.rst  fuel.rst  heat.rst  hh_ghd.rst  industry.rst  lulucf.rst  principles.rst  thg.rst  traffic.rst
excel/: germany_values.json  goettingen_values.json
exploration-and-data-generation/: README.rst
exploration-and-data-generation/ags-update/: README.rst  adjust.py  ags-history.json  agshistory.py  agsmaster.py  loadexcel.py  main.py  traffic.py
exploration-and-data-generation/generate-derived-assumptions/: README.rst  gen_calculate_derived_ass.py
exploration-and-data-generation/generate-derived-facts/: README.rst  gen_calculate_derived_facts.py
exploration-and-data-generation/generate_data_from_excel_spreadsheet/: gen_data_files_from_xlsx.py
exploration-and-data-generation/generate_renewables/: import_marktstammdaten.py
exploration-and-data-generation/industry_by_ags/: 2021.csv  dehst_co2e_2021.csv  get_values_for_genrator.ipynb  i18_per_ags_data_preperation.py  i18_values_germany.csv  (+2 more)
explorative_notebooks/: Anlagenliste_AGS.csv  Anlagenliste_AGS_V2.csv  ags_liste.csv  ags_liste_export.csv  get_i18_factors.ipynb  i18_per_ags_data_preperation.py  i18_ratio_x_to_co2e_total.csv  industry_ags_match_reduced_export.csv  read_dehst_xls.ipynb
explorer/: elm.js  elm.json  index.html
generatorcore/: agri2018.py  agri2030.py  ags.py  business2018.py  business2030.py  diffs.py  electricity2018.py  electricity2030.py  electricity2030_com.py  electricity2030_core.py  electricity2030_ger.py  fuels2018.py  fuels2030.py  generator.py  gtest.py  heat2018.py  heat2030.py  industry2018.py  industry2030.py  inputs.py  knud_classes.py  lulucf2018.py  lulucf2030.py  lulucf2030_pyr.py  makeentries.py  methodology183x.py  prequel.py  refdata.py  refdatatools.py  residences2018.py  residences2030.py  setup.py  tracednumber.py  transport2018.py  transport2030.py  utils.py
tests/: README.rst  repo_test_runner.sh  test_data.py  test_devtool_commands.py  test_end_to_end.py  test_entries.py  test_generatorcore.py  test_refdata.py  test_tracing.py  usage.json
(+555 files in other folders)
