[tool.poetry]
name = "climatevision"
version = "3.0.3"
description = "LocalZero Climate Vision -- Calculation and basic infrastructure."
authors = ["Benedikt Grundmann <benedikt.grundmann@gmail.com>","Anja Höhne","Anne Klenge","Jan Kuhlem",
          "Sebastian Lüttig","Silvan Ostheimer","Hauke Schmülling","Leon Schomburg <Leon.Schomburg.ext@germanzero.de>",
          "Manfred Schüssler","Anne Schwob", "Eckhard Weißhaar","Jeniffer Wessel","Simon Fichtner","Jannes Lampe",
          "Patrick Schmitz"]

packages = [
  { include = "climatevision", from="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
jsonrpcserver = "^5.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
pyright = "^1.1.390"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
black = {version = "^22.8.0", allow-prereleases = true}
openpyxl = "^3.0.10"
jupyter = "^1.0.0"
ipykernel = "^6.16.0"
pandas = "^2.2.3"
numpy = "^1.23.3"

[tool.pyright]
include = ["src", "commands", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
